Agregué un nav llamado cambio

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <title>Mi Página Web</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <nav>
         <a href="#">Inicio</a>
         <a href="#">Blog</a>
+        <a href="#">Cambio</a>
     </nav> 
     <h1>Imágenes no Encontradas</h1>
     <p id="imagenes-no-encontradas"></p>
