--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <title>Mi Página Web</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <style>
+        body.naranja {
+            background-color: orange;
+            color: #000; 
+        }
+    </style>
 </head>
-<body>
+<body class="naranja">
     <nav>
         <a href="#">Inicio</a>
         <a href="#">Blog</a>
@@ -17,3 +23,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
